{
  "version": 4,
  "terraform_version": "1.9.1",
  "serial": 1173,
  "lineage": "aa71e94c-20d3-af84-46bb-e01f8a992c62",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "wp-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "wordpress-lb-logs20250207103431906900000001",
                "enabled": true,
                "prefix": "test-lb"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:014498645423:loadbalancer/app/DigitalBoost-WordPress-ALB/32a9f0ca931c60ee",
            "arn_suffix": "app/DigitalBoost-WordPress-ALB/32a9f0ca931c60ee",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "DigitalBoost-WordPress-ALB-1810816431.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:014498645423:loadbalancer/app/DigitalBoost-WordPress-ALB/32a9f0ca931c60ee",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "DigitalBoost-WordPress-ALB",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0eef98a18a7e704e8"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02e20137e84f828f2"
              },
              {
                "subnet_id": "subnet-064b00c3ac9c9f0a7"
              }
            ],
            "subnets": [
              "subnet-02e20137e84f828f2",
              "subnet-064b00c3ac9c9f0a7"
            ],
            "tags": {
              "Name": "DigitalBoost-WordPress-ALB"
            },
            "tags_all": {
              "Name": "DigitalBoost-WordPress-ALB"
            },
            "vpc_id": "vpc-0d78363272960d1e9",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.alb.aws_s3_bucket.lb_logs",
            "module.networking.aws_security_group.wp-lb-sg",
            "module.vpc.aws_subnet.public-subnets",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.AZs"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "wp-lb-list",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:014498645423:listener/app/DigitalBoost-WordPress-ALB/32a9f0ca931c60ee/4520f7f54c8e11ce",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:014498645423:targetgroup/DigitalBoost-WordPress-TG/baa463656b5a4ddf",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:014498645423:listener/app/DigitalBoost-WordPress-ALB/32a9f0ca931c60ee/4520f7f54c8e11ce",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:014498645423:loadbalancer/app/DigitalBoost-WordPress-ALB/32a9f0ca931c60ee",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.wp-lb",
            "module.alb.aws_lb_target_group.wp-tg",
            "module.alb.aws_s3_bucket.lb_logs",
            "module.networking.aws_security_group.wp-lb-sg",
            "module.vpc.aws_subnet.public-subnets",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.AZs"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "wp-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:014498645423:targetgroup/DigitalBoost-WordPress-TG/baa463656b5a4ddf",
            "arn_suffix": "targetgroup/DigitalBoost-WordPress-TG/baa463656b5a4ddf",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-302",
                "path": "/health.php",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:014498645423:targetgroup/DigitalBoost-WordPress-TG/baa463656b5a4ddf",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:014498645423:loadbalancer/app/DigitalBoost-WordPress-ALB/32a9f0ca931c60ee"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "DigitalBoost-WordPress-TG",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "DigitalBoost-WordPress-TG"
            },
            "tags_all": {
              "Name": "DigitalBoost-WordPress-TG"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0d78363272960d1e9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:014498645423:security-group/sg-0f385d310f78a20b6",
            "description": "Security Group for SSH",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f385d310f78a20b6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "DigitalBoost-WordPress-SSH",
            "name_prefix": "",
            "owner_id": "014498645423",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "DigitalBoost-WordPress-SSH"
            },
            "tags_all": {
              "Name": "DigitalBoost-WordPress-SSH"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d78363272960d1e9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "wp-efs-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:014498645423:security-group/sg-05544998c3cc1e7ac",
            "description": "Security Group for EFS",
            "egress": [],
            "id": "sg-05544998c3cc1e7ac",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06da9734e5e58998b"
                ],
                "self": false,
                "to_port": 2049
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f385d310f78a20b6"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "DigitalBoost-WordPress-EFS",
            "name_prefix": "",
            "owner_id": "014498645423",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "DigitalBoost-WordPress-EFS"
            },
            "tags_all": {
              "Name": "DigitalBoost-WordPress-EFS"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d78363272960d1e9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "wp-lb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:014498645423:security-group/sg-0eef98a18a7e704e8",
            "description": "Security Group for ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0eef98a18a7e704e8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8089,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8089
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "DigitalBoost-WordPress-ALB",
            "name_prefix": "",
            "owner_id": "014498645423",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "DigitalBoost-WordPress-ALB"
            },
            "tags_all": {
              "Name": "DigitalBoost-WordPress-ALB"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d78363272960d1e9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "wp-rds-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:014498645423:security-group/sg-0739e459729003fe1",
            "description": "Security Group for RDS MySQL \u0026 EFS",
            "egress": [],
            "id": "sg-0739e459729003fe1",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06da9734e5e58998b"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "DigitalBoost-WordPress-RDS",
            "name_prefix": "",
            "owner_id": "014498645423",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "DigitalBoost-WordPress-RDS"
            },
            "tags_all": {
              "Name": "DigitalBoost-WordPress-RDS"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d78363272960d1e9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "wp-vpc-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:014498645423:security-group/sg-06da9734e5e58998b",
            "description": "Security Group for WordPress EC2 instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06da9734e5e58998b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f385d310f78a20b6"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0eef98a18a7e704e8"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "DigitalBoost-WordPress-Main-SG",
            "name_prefix": "",
            "owner_id": "014498645423",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "DigitalBoost-WordPress-Main-SG"
            },
            "tags_all": {
              "Name": "DigitalBoost-WordPress-Main-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d78363272960d1e9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ALB_HTTP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-592691423",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0eef98a18a7e704e8",
            "security_group_rule_id": "sgr-0dee917c260e321f2",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_security_group.wp-lb-sg",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ALB_HTTPS",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-1005017793",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0eef98a18a7e704e8",
            "security_group_rule_id": "sgr-02c6b98f1744fbacb",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_security_group.wp-lb-sg",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_all_ALB_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1083455709",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0eef98a18a7e704e8",
            "security_group_rule_id": "sgr-0d41a971236953a89",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_security_group.wp-lb-sg",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_all_bastion_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-3228517271",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0f385d310f78a20b6",
            "security_group_rule_id": "sgr-06de39fd35d134e89",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_security_group.ssh-sg",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_all_wordpress_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-3527078691",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-06da9734e5e58998b",
            "security_group_rule_id": "sgr-0051c25a68e92d911",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_security_group.wp-vpc-sg",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_http_from_alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 80,
            "id": "sgrule-3700363342",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-06da9734e5e58998b",
            "security_group_rule_id": "sgr-0df328c6a0aeaca30",
            "self": false,
            "source_security_group_id": "sg-0eef98a18a7e704e8",
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_security_group.wp-lb-sg",
            "module.networking.aws_security_group.wp-vpc-sg",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ssh-to-efs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 22,
            "id": "sgrule-2364789941",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-05544998c3cc1e7ac",
            "security_group_rule_id": "sgr-05661cca074ae8603",
            "self": false,
            "source_security_group_id": "sg-0f385d310f78a20b6",
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_security_group.ssh-sg",
            "module.networking.aws_security_group.wp-efs-sg",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ssh-to-wordpress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 22,
            "id": "sgrule-2116715994",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-06da9734e5e58998b",
            "security_group_rule_id": "sgr-0d5dc3ef1907ceaf8",
            "self": false,
            "source_security_group_id": "sg-0f385d310f78a20b6",
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_security_group.ssh-sg",
            "module.networking.aws_security_group.wp-vpc-sg",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ssh-wp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-223911638",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f385d310f78a20b6",
            "security_group_rule_id": "sgr-0a9c47da6c9a35ef1",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_security_group.ssh-sg",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "wp-to-efs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 2049,
            "id": "sgrule-1223653006",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-05544998c3cc1e7ac",
            "security_group_rule_id": "sgr-09347bb0dba71a59e",
            "self": false,
            "source_security_group_id": "sg-06da9734e5e58998b",
            "timeouts": null,
            "to_port": 2049,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_security_group.wp-efs-sg",
            "module.networking.aws_security_group.wp-vpc-sg",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "wp-to-rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 3306,
            "id": "sgrule-3255915138",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0739e459729003fe1",
            "security_group_rule_id": "sgr-0d341463c11e300ad",
            "self": false,
            "source_security_group_id": "sg-06da9734e5e58998b",
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_security_group.wp-rds-sg",
            "module.networking.aws_security_group.wp-vpc-sg",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "NATgw_eip_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09b35fba3d38ae0e1",
            "arn": "arn:aws:ec2:us-east-1:014498645423:elastic-ip/eipalloc-09b35fba3d38ae0e1",
            "association_id": "eipassoc-002c4f6ac2c4ad532",
            "domain": "vpc",
            "id": "eipalloc-09b35fba3d38ae0e1",
            "network_border_group": "us-east-1",
            "network_interface": "eni-097d490470949d569",
            "private_dns": "ip-10-0-0-232.ec2.internal",
            "private_ip": "10.0.0.232",
            "public_dns": "ec2-13-216-40-255.compute-1.amazonaws.com",
            "public_ip": "13.216.40.255",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "NATgw_eip_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05dd31c33e1d1709f",
            "arn": "arn:aws:ec2:us-east-1:014498645423:elastic-ip/eipalloc-05dd31c33e1d1709f",
            "association_id": "eipassoc-0ae2d2b388f2d2556",
            "domain": "vpc",
            "id": "eipalloc-05dd31c33e1d1709f",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0062c210bca1aa183",
            "private_dns": "ip-10-0-1-53.ec2.internal",
            "private_ip": "10.0.1.53",
            "public_dns": "ec2-3-95-41-167.compute-1.amazonaws.com",
            "public_ip": "3.95.41.167",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:014498645423:internet-gateway/igw-09e743cea057ee755",
            "id": "igw-09e743cea057ee755",
            "owner_id": "014498645423",
            "vpc_id": "vpc-0d78363272960d1e9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NATgw-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09b35fba3d38ae0e1",
            "association_id": "eipassoc-002c4f6ac2c4ad532",
            "connectivity_type": "public",
            "id": "nat-0ef071bad7ec8c9b4",
            "network_interface_id": "eni-097d490470949d569",
            "private_ip": "10.0.0.232",
            "public_ip": "13.216.40.255",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-064b00c3ac9c9f0a7"
          },
          "dependencies": [
            "module.vpc.aws_eip.NATgw_eip_1",
            "module.vpc.aws_subnet.public-subnets",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.AZs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NATgw-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05dd31c33e1d1709f",
            "association_id": "eipassoc-0ae2d2b388f2d2556",
            "connectivity_type": "public",
            "id": "nat-018a30b6cd24b49dd",
            "network_interface_id": "eni-0062c210bca1aa183",
            "private_ip": "10.0.1.53",
            "public_ip": "3.95.41.167",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-02e20137e84f828f2"
          },
          "dependencies": [
            "module.vpc.aws_eip.NATgw_eip_2",
            "module.vpc.aws_subnet.public-subnets",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.AZs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private-rt-natgw-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-051abd7b85ba7ec761080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0ef071bad7ec8c9b4",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-051abd7b85ba7ec76",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.NATgw_eip_1",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.NATgw-1",
            "module.vpc.aws_route_table.private-rt-1",
            "module.vpc.aws_subnet.public-subnets",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.AZs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private-rt-natgw-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-06f4e94588af11a611080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-018a30b6cd24b49dd",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06f4e94588af11a61",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.NATgw_eip_2",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.NATgw-2",
            "module.vpc.aws_route_table.private-rt-2",
            "module.vpc.aws_subnet.public-subnets",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.AZs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public-rt-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-09e743cea057ee755",
            "id": "r-rtb-0234b160763eed2b81080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0234b160763eed2b8",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public-rt",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rt-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:014498645423:route-table/rtb-051abd7b85ba7ec76",
            "id": "rtb-051abd7b85ba7ec76",
            "owner_id": "014498645423",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ef071bad7ec8c9b4",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "DigitalBoost-Private-Route-Table"
            },
            "tags_all": {
              "Name": "DigitalBoost-Private-Route-Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d78363272960d1e9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rt-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:014498645423:route-table/rtb-06f4e94588af11a61",
            "id": "rtb-06f4e94588af11a61",
            "owner_id": "014498645423",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-018a30b6cd24b49dd",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "DigitalBoost-Private-Route-Table-2"
            },
            "tags_all": {
              "Name": "DigitalBoost-Private-Route-Table-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d78363272960d1e9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:014498645423:route-table/rtb-0234b160763eed2b8",
            "id": "rtb-0234b160763eed2b8",
            "owner_id": "014498645423",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09e743cea057ee755",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "DigitalBoost-Public-Route-Table"
            },
            "tags_all": {
              "Name": "DigitalBoost-Public-Route-Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d78363272960d1e9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "priv-subnet-1-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b642ce6f762874f8",
            "route_table_id": "rtb-051abd7b85ba7ec76",
            "subnet_id": "subnet-02dd95e413b945dcf"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private-rt-1",
            "module.vpc.aws_subnet.private-subnets",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.AZs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "priv-subnet-2-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d53d7ccde67d3d3c",
            "route_table_id": "rtb-06f4e94588af11a61",
            "subnet_id": "subnet-03a004506cd7313a6"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private-rt-2",
            "module.vpc.aws_subnet.private-subnets",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.AZs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub-Subnet-1-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-033d31b5ee9903ef7",
            "route_table_id": "rtb-0234b160763eed2b8",
            "subnet_id": "subnet-064b00c3ac9c9f0a7"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public-rt",
            "module.vpc.aws_subnet.public-subnets",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.AZs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub-Subnet-2-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-071550d96080386f2",
            "route_table_id": "rtb-0234b160763eed2b8",
            "subnet_id": "subnet-02e20137e84f828f2"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public-rt",
            "module.vpc.aws_subnet.public-subnets",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.AZs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:014498645423:subnet/subnet-02dd95e413b945dcf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02dd95e413b945dcf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "014498645423",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "DigitalBoost-Private-Subnet-0",
              "Tier": "private"
            },
            "tags_all": {
              "Name": "DigitalBoost-Private-Subnet-0",
              "Tier": "private"
            },
            "vpc_id": "vpc-0d78363272960d1e9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.AZs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:014498645423:subnet/subnet-03a004506cd7313a6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03a004506cd7313a6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "014498645423",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "DigitalBoost-Private-Subnet-1",
              "Tier": "private"
            },
            "tags_all": {
              "Name": "DigitalBoost-Private-Subnet-1",
              "Tier": "private"
            },
            "vpc_id": "vpc-0d78363272960d1e9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.AZs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:014498645423:subnet/subnet-09023b1cf61bf27fa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09023b1cf61bf27fa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "014498645423",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "DigitalBoost-Private-Subnet-2",
              "Tier": "private"
            },
            "tags_all": {
              "Name": "DigitalBoost-Private-Subnet-2",
              "Tier": "private"
            },
            "vpc_id": "vpc-0d78363272960d1e9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.AZs"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:014498645423:subnet/subnet-02936e495be660ee3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02936e495be660ee3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "014498645423",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "DigitalBoost-Private-Subnet-3",
              "Tier": "private"
            },
            "tags_all": {
              "Name": "DigitalBoost-Private-Subnet-3",
              "Tier": "private"
            },
            "vpc_id": "vpc-0d78363272960d1e9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.AZs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:014498645423:subnet/subnet-064b00c3ac9c9f0a7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-064b00c3ac9c9f0a7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "014498645423",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "DigitalBoost-Public-Subnet-0",
              "Tier": "public"
            },
            "tags_all": {
              "Name": "DigitalBoost-Public-Subnet-0",
              "Tier": "public"
            },
            "vpc_id": "vpc-0d78363272960d1e9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.AZs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:014498645423:subnet/subnet-02e20137e84f828f2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02e20137e84f828f2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "014498645423",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "DigitalBoost-Public-Subnet-1",
              "Tier": "public"
            },
            "tags_all": {
              "Name": "DigitalBoost-Public-Subnet-1",
              "Tier": "public"
            },
            "vpc_id": "vpc-0d78363272960d1e9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.AZs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:014498645423:vpc/vpc-0d78363272960d1e9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-007beeda24647e897",
            "default_route_table_id": "rtb-0a95d1a30c34e07ec",
            "default_security_group_id": "sg-0781fe9aa336e1b9c",
            "dhcp_options_id": "dopt-0c609c40fe2272c0e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d78363272960d1e9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a95d1a30c34e07ec",
            "owner_id": "014498645423",
            "tags": {
              "Name": "DigitalBoost-WordPress-VPC"
            },
            "tags_all": {
              "Name": "DigitalBoost-WordPress-VPC"
            }
          }
        }
      ]
    }
  ]
}